[package]
name = "random_io_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
memmap2 = "0.9"
rayon = "1.8"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
