[package]
name = "random_io_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
rand = { version = "0.9.2", features = ["std_rng"] }
memmap2 = "0.9.7"
rayon = "1.10.0"
crossbeam = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
